Truncate name;handle for leaderboard with fixed sizes

--- a/src/components/layout/overrides/ciscolivela.scss
+++ b/src/components/layout/overrides/ciscolivela.scss
@@ -90,17 +90,11 @@
         .tweeter-card {
           .tweeter-details {
             .details {
-              .name {
+              .name, .twitter-handle {
                 white-space: nowrap;
                 text-overflow: ellipsis;
                 overflow: hidden;
-                max-width: 60%;
-              }
-              .twitter-handle {
-                white-space: nowrap;
-                text-overflow: ellipsis;
-                overflow: hidden;
-                max-width: 100%;
+                max-width: 250px;
               }
             }
           }
